// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateMessagePlanPage on submit it invokes the server action and renders error summary 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-width-container"
  >
    <main
      class="nhsuk-main-wrapper"
      id="maincontent"
      role="main"
    >
      <div
        aria-labelledby="error-summary-title"
        class="nhsuk-error-summary"
        role="alert"
        tabindex="-1"
      >
        <h2
          class="nhsuk-error-summary__title"
          data-testid="error-summary"
          id="error-summary-title"
        >
          There is a problem
        </h2>
        <ul
          class="nhsuk-list nhsuk-error-summary__list"
        >
          <li>
            <a
              href="#name"
            >
              Name Error
            </a>
          </li>
          <li>
            <a
              href="#campaignId"
            >
              Campaign Id Error
            </a>
          </li>
        </ul>
      </div>
      <div
        class="nhsuk-grid-row"
      >
        <div
          class="nhsuk-grid-column-two-thirds"
        >
          <h1
            class="nhsuk-heading-xl"
          >
            Create a message plan
          </h1>
          <form
            action="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
          >
            <input
              name="form-id"
              readonly=""
              type="hidden"
              value="message-plan"
            />
            <input
              name="csrf_token"
              readonly=""
              type="hidden"
              value="no_token"
            />
            <div
              class="nhsuk-form-group nhsuk-u-margin-bottom-6 nhsuk-form-group--error"
            >
              <label
                class="nhsuk-label nhsuk-label--s"
                for="name"
              >
                Message plan name
              </label>
              <div
                class="nhsuk-hint"
              >
                This will not be visible to recipients.
              </div>
              <details
                class="nhsuk-details nhsuk-u-margin-top-3"
              >
                <summary
                  class="nhsuk-details__summary"
                >
                  <span
                    class="nhsuk-details__summary-text"
                  >
                    Naming your message plans
                  </span>
                </summary>
                <div
                  class="nhsuk-details__text"
                >
                  <p>
                    You should name your message plans in a way that works best for your service or organisation.
                  </p>
                  <p>
                    Common message plan names include the:
                  </p>
                  <ul
                    class="nhsuk-list nhsuk-list--bullet"
                  >
                    <li>
                      channels it uses
                    </li>
                    <li>
                      subject or reason for the message
                    </li>
                    <li>
                      intended audience for the message
                    </li>
                    <li>
                      version number
                    </li>
                  </ul>
                  <p>
                    For example, 'Email, SMS, letter - covid19 2023 - over 65s - version 3'
                  </p>
                </div>
              </details>
              <div
                class="nhsuk-form-group nhsuk-form-group--error"
              >
                <span
                  class="nhsuk-error-message"
                  id="name--error-message"
                >
                  <span
                    class="nhsuk-u-visually-hidden"
                  >
                    Error: 
                  </span>
                  Name Error
                </span>
                <input
                  aria-describedby="name--error-message"
                  class="nhsuk-input nhsuk-input--error"
                  data-testid="name-field"
                  id="name"
                  name="name"
                  type="text"
                  value="My Message Plan"
                />
              </div>
            </div>
            <div
              class="nhsuk-form-group nhsuk-u-margin-bottom-6"
            >
              <div
                class="nhsuk-form-group nhsuk-form-group--error"
              >
                <label
                  class="nhsuk-label nhsuk-label--s"
                  for="campaignId"
                  id="campaignId--label"
                >
                  Campaign
                </label>
                <div
                  class="nhsuk-hint"
                  id="campaignId--hint"
                >
                  Choose which campaign this message plan will link to
                </div>
                <div
                  class="nhsuk-warning-callout nhsuk-u-margin-bottom-5 nhsuk-u-margin-top-5"
                  data-testid="campaign-warning-callout"
                >
                  <h3
                    class="nhsuk-warning-callout__label"
                  >
                    <span
                      role="text"
                    >
                      <span
                        class="nhsuk-u-visually-hidden"
                      >
                        Important: 
                      </span>
                      Important
                    </span>
                  </h3>
                  <p>
                    You cannot edit the campaign after you create a message plan. If you need to link to a different campaign later, create a new message plan.
                  </p>
                </div>
                <span
                  class="nhsuk-error-message"
                  id="campaignId--error-message"
                >
                  <span
                    class="nhsuk-u-visually-hidden"
                  >
                    Error: 
                  </span>
                  Campaign Id Error
                </span>
                <select
                  aria-describedby="campaignId--hint campaignId--error-message"
                  aria-labelledby="campaignId--label"
                  class="nhsuk-select nhsuk-select--error"
                  data-testid="campaign-id-field"
                  id="campaignId"
                  name="campaignId"
                >
                  <option />
                  <option
                    value="campaign-1"
                  >
                    campaign-1
                  </option>
                  <option
                    value="campaign-2"
                  >
                    campaign-2
                  </option>
                </select>
              </div>
            </div>
            <div
              class="nhsuk-form-group"
            >
              <button
                aria-disabled="false"
                class="nhsuk-button"
                data-testid="submit-button"
                type="submit"
              >
                Save and continue
              </button>
              <a
                class="nhsuk-u-font-size-19 nhsuk-u-margin-left-3 nhsuk-u-padding-top-3 inline-block"
                data-testid="back-link-bottom"
                href="/message-plans/choose-message-order"
              >
                Go back
              </a>
            </div>
            <input
              name="messageOrder"
              readonly=""
              type="hidden"
              value="NHSAPP"
            />
          </form>
        </div>
      </div>
    </main>
  </div>
</DocumentFragment>
`;

exports[`CreateMessagePlanPage renders the page 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-width-container"
  >
    <main
      class="nhsuk-main-wrapper"
      id="maincontent"
      role="main"
    >
      <div
        class="nhsuk-grid-row"
      >
        <div
          class="nhsuk-grid-column-two-thirds"
        >
          <h1
            class="nhsuk-heading-xl"
          >
            Create a message plan
          </h1>
          <form
            action="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
          >
            <input
              name="form-id"
              readonly=""
              type="hidden"
              value="message-plan"
            />
            <input
              name="csrf_token"
              readonly=""
              type="hidden"
              value="no_token"
            />
            <div
              class="nhsuk-form-group nhsuk-u-margin-bottom-6"
            >
              <label
                class="nhsuk-label nhsuk-label--s"
                for="name"
              >
                Message plan name
              </label>
              <div
                class="nhsuk-hint"
              >
                This will not be visible to recipients.
              </div>
              <details
                class="nhsuk-details nhsuk-u-margin-top-3"
              >
                <summary
                  class="nhsuk-details__summary"
                >
                  <span
                    class="nhsuk-details__summary-text"
                  >
                    Naming your message plans
                  </span>
                </summary>
                <div
                  class="nhsuk-details__text"
                >
                  <p>
                    You should name your message plans in a way that works best for your service or organisation.
                  </p>
                  <p>
                    Common message plan names include the:
                  </p>
                  <ul
                    class="nhsuk-list nhsuk-list--bullet"
                  >
                    <li>
                      channels it uses
                    </li>
                    <li>
                      subject or reason for the message
                    </li>
                    <li>
                      intended audience for the message
                    </li>
                    <li>
                      version number
                    </li>
                  </ul>
                  <p>
                    For example, 'Email, SMS, letter - covid19 2023 - over 65s - version 3'
                  </p>
                </div>
              </details>
              <div
                class="nhsuk-form-group"
              >
                <input
                  class="nhsuk-input"
                  data-testid="name-field"
                  id="name"
                  name="name"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="nhsuk-form-group nhsuk-u-margin-bottom-6"
            >
              <div
                class="nhsuk-form-group"
              >
                <label
                  class="nhsuk-label nhsuk-label--s"
                  for="campaignId"
                  id="campaignId--label"
                >
                  Campaign
                </label>
                <div
                  class="nhsuk-hint"
                  id="campaignId--hint"
                >
                  Choose which campaign this message plan will link to
                </div>
                <div
                  class="nhsuk-warning-callout nhsuk-u-margin-bottom-5 nhsuk-u-margin-top-5"
                  data-testid="campaign-warning-callout"
                >
                  <h3
                    class="nhsuk-warning-callout__label"
                  >
                    <span
                      role="text"
                    >
                      <span
                        class="nhsuk-u-visually-hidden"
                      >
                        Important: 
                      </span>
                      Important
                    </span>
                  </h3>
                  <p>
                    You cannot edit the campaign after you create a message plan. If you need to link to a different campaign later, create a new message plan.
                  </p>
                </div>
                <select
                  aria-describedby="campaignId--hint campaignId--error-message"
                  aria-labelledby="campaignId--label"
                  class="nhsuk-select"
                  data-testid="campaign-id-field"
                  id="campaignId"
                  name="campaignId"
                >
                  <option />
                  <option
                    value="campaign-1"
                  >
                    campaign-1
                  </option>
                  <option
                    value="campaign-2"
                  >
                    campaign-2
                  </option>
                </select>
              </div>
            </div>
            <div
              class="nhsuk-form-group"
            >
              <button
                aria-disabled="false"
                class="nhsuk-button"
                data-testid="submit-button"
                type="submit"
              >
                Save and continue
              </button>
              <a
                class="nhsuk-u-font-size-19 nhsuk-u-margin-left-3 nhsuk-u-padding-top-3 inline-block"
                data-testid="back-link-bottom"
                href="/message-plans/choose-message-order"
              >
                Go back
              </a>
            </div>
            <input
              name="messageOrder"
              readonly=""
              type="hidden"
              value="NHSAPP"
            />
          </form>
        </div>
      </div>
    </main>
  </div>
</DocumentFragment>
`;
